# digikey-api

./: pyproject.toml
digikey/: __init__.py  constants.py  decorators.py  utils.py
digikey/oauth/: oauth2.py
digikey/v3/: api.py
digikey/v3/batchproductdetails/: api_client.py  configuration.py  rest.py
digikey/v3/batchproductdetails/api/: batch_search_api.py
digikey/v3/batchproductdetails/models/: api_error_response.py  api_validation_error.py  associated_product.py  basic_product.py  batch_product_details_request.py  iso_search_locale.py  kit_part.py  limited_taxonomy.py  pid_vid.py  price_break.py  product_details.py
digikey/v3/ordersupport/: api_client.py  configuration.py  rest.py
digikey/v3/ordersupport/models/: __init__.py  api_error_response.py  api_validation_error.py  back_order_details.py  default_shipping.py  line_item.py  order_status_response.py  sales_order_history_item.py  salesorder_history_item.py  schedule.py
digikey/v3/productinformation/: __init__.py  api_client.py  configuration.py  rest.py
digikey/v3/productinformation/api/: part_search_api.py
digikey/v3/productinformation/models/: __init__.py  api_error_response.py  api_validation_error.py  associated_product.py  digi_reel_pricing.py  filters.py  iso_search_locale.py  keyword_search_request.py  kit_part.py  (+14 more)
digikey/v4/: api.py
digikey/v4/batchproductdetails/: __init__.py  api_client.py  configuration.py  rest.py
digikey/v4/ordersupport/: __init__.py  api_client.py  configuration.py  rest.py
digikey/v4/productinformation/: __init__.py  api_client.py  configuration.py  rest.py
(+103 files in other folders)
