[project]
name = "digikey-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "certauth>=1.3.0",
    "certifi>=2025.8.3",
    "inflection>=0.5.1",
    "requests>=2.32.5",
    "responses>=0.25.8",
    "retrying>=1.4.2",
    "setuptools>=80.9.0",
    "six>=1.17.0",
    "urllib3>=2.5.0",
]

[dependency-groups]
dev = [
    "bump2version>=1.0.1",
    "gitpython>=3.1.45",
    "twine>=6.1.0",
    "wheel>=0.45.1",
]
test = [
    "coverage>=7.10.5",
    "flake8>=7.3.0",
    "mock>=5.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[tool.ruff]
line-length = 100
lint.select = ["ALL"]
lint.ignore = [
    "FA100",
    "FA102",
    "TRY003",
    "D400",
    "D415",
    "RUF012",
    "B019",
    "TD003",
    "G004",
    "EM101",
    "EM102",
    "D203",
    "D212",
    "COM812"
]
